Nav bar white space fixed

--- a/WebApp/static/main.css
+++ b/WebApp/static/main.css
@@ -75,7 +75,7 @@ nav a:link, a:visited {
     background-color: #a3bd74;
     color: white;
     width: 120px;
-    padding: 19.5px 15px;
+    padding: 20px 15px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
